@@ -3,6 +3,7 @@ siril 1.2.6
 * Fixed sign error in messier catalog (#1453)
 * Fixed Save As feature (#1452)
 * Fixed handling widechar with an updated version of cfitsio (#1456)
+* Changed configuration directory on macOS to org.siril.Siril (!798)
 
 siril 1.2.5
 11/22/24
